feat: station select ui

--- a/src/view/index.html
+++ b/src/view/index.html
@@ -27,12 +27,6 @@
                 <div class="card" id="card-station">
                     <div class="value" id="val-station">E-310-17E83F8</div>
                 </div>
-                <!-- Station Selection List -->
-                <div id="station-selection" class="station-selection">
-                    <div id="station-list" class="station-list">
-                        <!-- Stations will be populated here -->
-                    </div>
-                </div>
                 <div class="card" id="card-area">
                     <div class="value" id="val-area">新竹縣 竹東鎮</div>
                 </div>
@@ -50,6 +44,13 @@
                 </div>
                 <div class="card" id="card-time">
                     <div class="value" id="val-time">----/--/--<br>--:--:--</div>
+                </div>
+            </div>
+
+            <!-- Station Selection List (separate from default cards) -->
+            <div id="station-selection" class="station-selection" style="display: none;">
+                <div id="station-list" class="station-list">
+                    <!-- Stations will be populated here -->
                 </div>
             </div>
 
