--- a/src/view/index.html
+++ b/src/view/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src https://raw.githubusercontent.com wss://bamboo.exptech.dev;">
     <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="../css/info-area.css">
     <link rel="stylesheet" href="../css/station-selector.css">
@@ -52,7 +53,7 @@
                 </div>
             </div>
         </div>
-        <script src="../js/index.js"></script>
+        <script src="../../dist/js/index.js"></script>
     </div>
 </body>
 
