--- a/src/css/info-area.css
+++ b/src/css/info-area.css
@@ -32,7 +32,7 @@
 
 .label {
     font-size: 0.9rem;
-    color: #888;
+    color: #fff;
     text-transform: uppercase;
     margin-bottom: 4px;
     margin-top: 0;
