fix: pga font-size

--- a/src/css/info-area.css
+++ b/src/css/info-area.css
@@ -94,8 +94,13 @@
 #val-int {
     font-size: 40px;
 }
+
 #val-int-level {
     font-size: 40px;
+}
+
+#val-pga {
+    font-size: 30px;
 }
 
 .selected-station-card {
