--- a/src/css/base.css
+++ b/src/css/base.css
@@ -33,13 +33,32 @@ body {
     background: #111;
 }
 
+.waveform-container {
+    position: relative;
+}
+
+.axis-label {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    z-index: 10;
+    pointer-events: none;
+    font-size: 12px;
+    font-weight: 600;
+    padding: 2px 4px;
+    border-radius: 6px;
+    background: #1A1A1A;
+    color: white;
+    border: 1px solid #333;
+}
+
 canvas {
     display: block;
     width: 100%;
     height: 100%;
 }
 
-.wave-canvas:not(:last-child) {
+.waveform-container:not(:last-child) .wave-canvas {
     border-bottom: 1px solid #333;
 }
 
