--- a/src/view/index.html
+++ b/src/view/index.html
@@ -41,6 +41,9 @@
                 <div class="card" id="card-area">
                     <div class="value" id="val-area">--- ---</div>
                 </div>
+                <div class="card" id="card-error">
+                    <div class="value" id="val-error">錯誤率：--.-%</div>
+                </div>
                 <div class="card" id="card-int">
                     <div class="label">Intensity</div>
                     <div class="value" id="val-int">----</div>
