--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,68 +1,68 @@
 * {
-    user-select: none;
+  user-select: none;
 }
 
 body {
-    background-color: #000;
-    color: #fff;
-    font-family: 'Segoe UI', Roboto, Arial, sans-serif;
-    margin: 0;
-    height: 100vh;
-    overflow: hidden;
+  background-color: #000;
+  color: #fff;
+  font-family: "Segoe UI", Roboto, Arial, sans-serif;
+  margin: 0;
+  height: 100vh;
+  overflow: hidden;
 }
 
 #widget-container {
-    position: relative;
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-    background: #050505;
-    border: none;
-    border-radius: 0;
-    box-shadow: none;
-    display: flex;
-    flex-direction: row-reverse;
-    min-width: 300px;
-    min-height: 150px;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  background: #050505;
+  border: none;
+  border-radius: 0;
+  box-shadow: none;
+  display: flex;
+  flex-direction: row-reverse;
+  min-width: 300px;
+  min-height: 150px;
 }
 
 #chart-area {
-    flex: 1;
-    position: relative;
-    overflow: hidden;
-    background: #111;
+  flex: 1;
+  position: relative;
+  overflow: hidden;
+  background: #111;
 }
 
 .waveform-container {
-    position: relative;
+  position: relative;
 }
 
 .axis-label {
-    position: absolute;
-    top: 5px;
-    left: 5px;
-    z-index: 10;
-    pointer-events: none;
-    font-size: 12px;
-    font-weight: 600;
-    padding: 2px 4px;
-    border-radius: 6px;
-    background: #1A1A1A;
-    color: white;
-    border: 1px solid #333;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  z-index: 10;
+  pointer-events: none;
+  font-size: 12px;
+  font-weight: 600;
+  padding: 2px 4px;
+  border-radius: 6px;
+  background: #1a1a1a;
+  color: white;
+  border: 1px solid #333;
 }
 
 canvas {
-    display: block;
-    width: 100%;
-    height: 100%;
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .waveform-container:not(:last-child) .wave-canvas {
-    border-bottom: 1px solid #333;
+  border-bottom: 1px solid #333;
 }
 
 .time-axis-canvas {
-    border-top: 1px solid #333;
-    background: #0a0a0a;
+  border-top: 1px solid #333;
+  background: #0a0a0a;
 }
