fix: reset error rate

--- a/src/view/index.html
+++ b/src/view/index.html
@@ -45,7 +45,7 @@
             <div class="value" id="val-area">--- ---</div>
           </div>
           <div class="card" id="card-error">
-            <div class="value" id="val-error">錯誤率：-.-%</div>
+            <div class="value" id="val-error">錯誤率：0.0%</div>
           </div>
           <div class="card" id="card-int">
             <div class="label">Intensity</div>
