--- a/src/view/index.html
+++ b/src/view/index.html
@@ -8,7 +8,7 @@
     />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src https://raw.githubusercontent.com wss://bamboo.exptech.dev;"
+      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src https://raw.githubusercontent.com wss://bamboo.exptech.dev http://api.core-tyo1.exptech.dev;"
     />
     <link rel="stylesheet" href="../css/base.css" />
     <link rel="stylesheet" href="../css/info-area.css" />
